src/test/deca/syntax/invalid/parser/if-else.deca
// Invalid if else test

{
    if (true) {}
    else  }

}